accessibility color shifts

--- a/themes/siwps/styles/_nav.scss
+++ b/themes/siwps/styles/_nav.scss
@@ -103,7 +103,7 @@ $nav_height:50px;
     //@include container-flush();
     height:$nav_height;
 
-    background: $nav_blue;
+    background: $columbia_blue;
 
 
     a {
