--- a/themes/siwps/styles/_news.scss
+++ b/themes/siwps/styles/_news.scss
@@ -57,7 +57,7 @@
   }
 
   .the_date {
-    background: #c0cd3f;
+    background: #4a4f10;
     padding: 0.25em;
     float: left;
     clear: both;
