--- a/themes/siwps/styles/style.scss
+++ b/themes/siwps/styles/style.scss
@@ -20,6 +20,7 @@ $screen-xl-min: 1440px;
 $max-text-container: 860px;
 
 $nav_blue: #6caddf;
+$columbia_blue: #1D4F91;
 $linkblue: #555555;
 /* #41516c; */
 
@@ -95,7 +96,7 @@ h4 {
 
   &.section {
     @include clearfix();
-    color: $nav_blue;
+    color: $columbia_blue;
     font-size: 1.5rem;
     text-transform: uppercase;
 
