--- a/themes/siwps/styles/_nav.scss
+++ b/themes/siwps/styles/_nav.scss
@@ -11,8 +11,13 @@ $nav_height:50px;
     text-decoration: none;
     height: 54px;
     width: 54px;
+    border: none;
+    background:none;
 
     line-height: 54px;
+    text-indent: -9999px;
+    overflow: hidden;
+    white-space: nowrap;
 
     @media (min-width: $screen-lg-min) {
         display: none;
@@ -158,10 +163,10 @@ $nav_height:50px;
     #search {
 		button {
             float: right;
-            display: block;
-            background-image: url('img/mag.png');
-            background-repeat: no-repeat;
-            background-size: 22px 22px;
+                 
+                align-items: center;
+                justify-content: center;
+                display:flex;
             background-position: center center;
             border: none;
             height: 45px;
@@ -169,6 +174,12 @@ $nav_height:50px;
 			border-radius: .25em;
 			background-color:#fff;
 			padding-left:1rem;
+
+            img {
+                width:22px;
+                height:22px;
+       
+            }
 
             &:hover {
                 opacity:.5;
