php errors + more alt images

--- a/themes/siwps/styles/style.scss
+++ b/themes/siwps/styles/style.scss
@@ -636,7 +636,7 @@ a.button {
 
   input[type="submit"] {
     font-size: 1.25rem;
-    background: $nav_blue;
+    background: $columbia_blue;
     border: none;
     display: block;
     width: 25%;
