--- a/themes/siwps/styles/_news.scss
+++ b/themes/siwps/styles/_news.scss
@@ -57,7 +57,7 @@
   }
 
   .the_date {
-    background: #C75000;
+    background: $highlight-color;
     padding: 0.25em 0.5em;
     float: left;
     clear: both;
