--- a/themes/siwps/styles/style.scss
+++ b/themes/siwps/styles/style.scss
@@ -32,6 +32,7 @@ $max-text-container: 860px;
 $columbia_blue: #1D4F91;
 $nav_blue: $columbia_blue; //  #6caddf;
 $linkblue: #555555;
+$highlight-color: #C75000;
 /* #41516c; */
 
 @import url("https://use.typekit.net/rrk3yoc.css");
