--- a/themes/siwps/styles/_nav.scss
+++ b/themes/siwps/styles/_nav.scss
@@ -67,7 +67,6 @@ $nav_height:50px;
             display: block;
 
             margin: 0;
-            //font-size: 1.75rem;
             text-transform: uppercase;
             text-decoration: none;
             padding: 30px 10px 30px 10px;
@@ -101,7 +100,6 @@ $nav_height:50px;
 
     position: relative;
     z-index: 1000;
-
     font-weight:500;
     letter-spacing: 0.5px;
 
@@ -131,7 +129,7 @@ $nav_height:50px;
             display: block;
             float: left;
             margin: 0;
-            font-size: 20px;
+            font-size: .85rem;
             text-transform: uppercase;
             text-decoration: none;
             padding: 15px 10px 0 10px;
@@ -210,7 +208,7 @@ $nav_height:50px;
         }
 
         input {
-            font-size: 20px;
+            font-size: .85rem;
             padding: 15px 0.2em 10px 0.2em;
             margin: 0.1em 0.2em;
             /* the following ensures they're all using the same box-model for rendering */
