--- a/themes/siwps/styles/style.scss
+++ b/themes/siwps/styles/style.scss
@@ -10,6 +10,7 @@ License URI: https://www.gnu.org/licenses/gpl.html
 Tags: 
 
 */
+@use "sass:math";
 @use "grid" as *;
 @use "bs" as *;
 @use "nav" as *;
@@ -23,6 +24,7 @@ Tags:
 @use "animate" as *;
 @use "color" as *;
 @use "font" as *;
+
 
 .screen-reader-text {
   position: absolute;
@@ -508,7 +510,7 @@ a.button {
 }
 
 .subpages {
-  margin-left: -$grid-gutter-width / 2;
+  margin-left: (-$grid-gutter-width / 2);
 }
 
 .deliverables {
