--- a/themes/siwps/style.css
+++ b/themes/siwps/style.css
@@ -1379,8 +1379,8 @@ Tags:
   transition: background-color 0.75s;
   border-radius: 0.5em;
   display: block;
-  margin: -1rem;
-  padding: 1rem;
+  margin: 0 -1rem;
+  padding: -1rem;
   text-decoration: none;
 }
 .publication a:after {
