--- a/themes/siwps/styles/_bs.scss
+++ b/themes/siwps/styles/_bs.scss
@@ -17,8 +17,8 @@
 @mixin container-fixed($gutter: $grid-gutter-width) {
   margin-right: auto;
   margin-left: auto;
-  padding-left:  $gutter / 2;
-  padding-right: $gutter / 2;
+  padding-left:  math.div($gutter, 2);
+  padding-right: math.div($gutter, 2);
   
   @media (min-width: $screen-sm-min) {
 	padding-left:  $gutter; //floor(($gutter / 2));
@@ -50,8 +50,8 @@
 
 // Creates a wrapper for a series of columns
 @mixin make-row($gutter: $grid-gutter-width) {
-  margin-left:  ceil(($gutter / -2));
-  margin-right: floor(($gutter / -2));
+  margin-left:  math.ceil(($gutter / -2));
+  margin-right: math.floor(($gutter / -2));
   @include clearfix;
 }
 
@@ -61,8 +61,8 @@
   float: left;
   width: math.percentage(($columns / $grid-columns));
   min-height: 1px;
-  padding-left:  ($gutter / 2);
-  padding-right: ($gutter / 2);
+  padding-left: math.div($gutter, 2);
+  padding-right:math.div($gutter, 2);
 }
 @mixin make-xs-column-offset($columns) {
   margin-left: math.percentage(($columns / $grid-columns));
@@ -78,8 +78,8 @@
 @mixin make-sm-column($columns, $gutter: $grid-gutter-width) {
   position: relative;
   min-height: 1px;
-  padding-left:  ($gutter / 2);
-  padding-right: ($gutter / 2);
+  padding-left:  math.div($gutter,  2);
+  padding-right: math.div($gutter,2);
 
   @media (min-width: $screen-sm-min) {
     float: left;
@@ -106,8 +106,8 @@
 @mixin make-md-column($columns, $gutter: $grid-gutter-width) {
   position: relative;
   min-height: 1px;
-  padding-left:  ($gutter / 2);
-  padding-right: ($gutter / 2);
+  padding-left: math.div($gutter, 2);
+  padding-right:math.div($gutter, 2);
 
   @media (min-width: $screen-md-min) {
     float: left;
@@ -134,8 +134,8 @@
 @mixin make-lg-column($columns, $gutter: $grid-gutter-width) {
   position: relative;
   min-height: 1px;
-  padding-left:  ($gutter / 2);
-  padding-right: ($gutter / 2);
+  padding-left: math.div($gutter, 2);
+  padding-right:math.div($gutter, 2);
 
   @media (min-width: $screen-lg-min) {
     float: left;
