--- a/themes/siwps/styles/_event.scss
+++ b/themes/siwps/styles/_event.scss
@@ -2,7 +2,7 @@
 @use "grid" as *;
 @use "font" as *;
 @use "color" as *;
-
+@use "sass:math";
 section.events {
   @include clearfix();
 }
@@ -52,8 +52,8 @@ section.events {
     a {
       border-radius: 0.5em;
       display: block;
-      margin-left: -$grid-gutter-width/2;
-      margin-right: -$grid-gutter-width/2;
+      margin-left: math.div(-$grid-gutter-width, 2);
+      margin-right: math.div(-$grid-gutter-width, 2);
       margin-top: 0;
       margin-bottom: 0;
       padding: $grid-gutter-width/2;
