--- a/themes/siwps/styles/_news.scss
+++ b/themes/siwps/styles/_news.scss
@@ -1,7 +1,8 @@
 @use "bs" as *;
 @use "grid" as *;
-  @use "font" as *;
+@use "font" as *;
 @use "color" as *;
+@use "sass:math";
 .news_home {
   @include clearfix();
 }
@@ -38,8 +39,8 @@
     transition: background-color 0.75s;
     border-radius: 0.5em;
     display: block;
-    margin-left: -$grid-gutter-width/2;
-    margin-right: -$grid-gutter-width/2;
+    margin-left: math.div(-$grid-gutter-width, 2);
+    margin-right: math.div(-$grid-gutter-width, 2);
     margin-top: 0;
     margin-bottom: 0;
     padding: $grid-gutter-width/2;
