--- a/themes/siwps/styles/_person.scss
+++ b/themes/siwps/styles/_person.scss
@@ -1,6 +1,6 @@
 @use "bs" as *;
 @use "grid" as *;
-
+@use "sass:math";
 .personrow {
   @include make-xs-column(12);
 }
@@ -54,8 +54,8 @@
     @include clearfix();
     border-radius: 0.5em;
     display: block;
-    margin-left: -$grid-gutter-width/2;
-    margin-right: -$grid-gutter-width/2;
+    margin-left: math.div(-$grid-gutter-width, 2);
+    margin-right: math.div(-$grid-gutter-width, 2);
     margin-top: 0;
     margin-bottom: 0;
     padding: $grid-gutter-width/2;
