--- a/themes/siwps/styles/_publication.scss
+++ b/themes/siwps/styles/_publication.scss
@@ -1,11 +1,12 @@
 @use "grid" as *;
 @use "bs" as *;
+@use "sass:math";
 .featuredpublications {
   @include clearfix();
   padding:0 2rem;
   margin: 0;
-  margin-left: -$grid-gutter-width/2;
-  margin-right: -$grid-gutter-width/2;
+  margin-left: math.div(-$grid-gutter-width, 2);
+  margin-right: math.div(-$grid-gutter-width, 2);
 }
 
 .featuredpublication {
@@ -87,8 +88,8 @@
     transition: background-color .75s;
     border-radius: 0.5em;
     display: block;
-    margin: 0 -$grid-gutter-width / 2;
-    padding: $grid-gutter-width/2;
+    margin: 0 (-$grid-gutter-width / 2);
+    padding: (-$grid-gutter-width / 2);
     text-decoration: none;
     &:hover {
       background-color: hsl(60, 17%, 95%);
