import sass:math

--- a/themes/siwps/styles/_person.scss
+++ b/themes/siwps/styles/_person.scss
@@ -58,7 +58,7 @@
     margin-right: math.div(-$grid-gutter-width, 2);
     margin-top: 0;
     margin-bottom: 0;
-    padding: $grid-gutter-width/2;
+    padding: math.div($grid-gutter-width, 2);
     text-decoration: none;
     transition: background-color 0.75s;
 
