--- a/themes/siwps/styles/_event.scss
+++ b/themes/siwps/styles/_event.scss
@@ -56,7 +56,7 @@ section.events {
       margin-right: math.div(-$grid-gutter-width, 2);
       margin-top: 0;
       margin-bottom: 0;
-      padding: $grid-gutter-width/2;
+      padding: math.div($grid-gutter-width, 2);
       text-decoration: none;
       transition: background-color 0.75s;
       &:hover {
