--- a/themes/siwps/styles/_news.scss
+++ b/themes/siwps/styles/_news.scss
@@ -43,7 +43,7 @@
     margin-right: math.div(-$grid-gutter-width, 2);
     margin-top: 0;
     margin-bottom: 0;
-    padding: $grid-gutter-width/2;
+    padding: math.div($grid-gutter-width, 2);
     text-decoration: none;
     &:hover {
       background-color: hsl(60, 17%, 95%);
