--- a/themes/siwps/styles/_bs.scss
+++ b/themes/siwps/styles/_bs.scss
@@ -59,19 +59,19 @@
 @mixin make-xs-column($columns, $gutter: $grid-gutter-width) {
   position: relative;
   float: left;
-  width: math.percentage(($columns / $grid-columns));
+  width: math.percentage(math.div($columns , $grid-columns));
   min-height: 1px;
   padding-left: math.div($gutter, 2);
   padding-right:math.div($gutter, 2);
 }
 @mixin make-xs-column-offset($columns) {
-  margin-left: math.percentage(($columns / $grid-columns));
+  margin-left: math.percentage(math.div($columns , $grid-columns));
 }
 @mixin make-xs-column-push($columns) {
-  left: math.percentage(($columns / $grid-columns));
+  left: math.percentage(math.div($columns , $grid-columns));
 }
 @mixin make-xs-column-pull($columns) {
-  right: math.percentage(($columns / $grid-columns));
+  right: math.percentage(math.div($columns , $grid-columns));
 }
 
 // Generate the small columns
@@ -83,22 +83,22 @@
 
   @media (min-width: $screen-sm-min) {
     float: left;
-    width: math.percentage(($columns / $grid-columns));
+    width: math.percentage(math.div($columns , $grid-columns));
   }
 }
 @mixin make-sm-column-offset($columns) {
   @media (min-width: $screen-sm-min) {
-    margin-left: math.percentage(($columns / $grid-columns));
+    margin-left: math.percentage(math.div($columns , $grid-columns));
   }
 }
 @mixin make-sm-column-push($columns) {
   @media (min-width: $screen-sm-min) {
-    left: math.percentage(($columns / $grid-columns));
+    left: math.percentage(math.div($columns , $grid-columns));
   }
 }
 @mixin make-sm-column-pull($columns) {
   @media (min-width: $screen-sm-min) {
-    right: math.percentage(($columns / $grid-columns));
+    right: math.percentage(math.div($columns , $grid-columns));
   }
 }
 
@@ -111,22 +111,22 @@
 
   @media (min-width: $screen-md-min) {
     float: left;
-    width: math.percentage(($columns / $grid-columns));
+    width: math.percentage(math.div($columns , $grid-columns));
   }
 }
 @mixin make-md-column-offset($columns) {
   @media (min-width: $screen-md-min) {
-    margin-left: math.percentage(($columns / $grid-columns));
+    margin-left: math.percentage(math.div($columns , $grid-columns));
   }
 }
 @mixin make-md-column-push($columns) {
   @media (min-width: $screen-md-min) {
-    left: math.percentage(($columns / $grid-columns));
+    left: math.percentage(math.div($columns , $grid-columns));
   }
 }
 @mixin make-md-column-pull($columns) {
   @media (min-width: $screen-md-min) {
-    right: math.percentage(($columns / $grid-columns));
+    right: math.percentage(math.div($columns , $grid-columns));
   }
 }
 
@@ -139,22 +139,22 @@
 
   @media (min-width: $screen-lg-min) {
     float: left;
-    width: math.percentage(($columns / $grid-columns));
+    width: math.percentage(math.div($columns , $grid-columns));
   }
 }
 @mixin make-lg-column-offset($columns) {
   @media (min-width: $screen-lg-min) {
-    margin-left: math.percentage(($columns / $grid-columns));
+    margin-left: math.percentage(math.div($columns , $grid-columns));
   }
 }
 @mixin make-lg-column-push($columns) {
   @media (min-width: $screen-lg-min) {
-    left: math.percentage(($columns / $grid-columns));
+    left: math.percentage(math.div($columns , $grid-columns));
   }
 }
 @mixin make-lg-column-pull($columns) {
   @media (min-width: $screen-lg-min) {
-    right: percentage(($columns / $grid-columns));
+    right: math.percentage(math.div($columns , $grid-columns));
   }
 }
 
