--- a/themes/siwps/styles/_event.scss
+++ b/themes/siwps/styles/_event.scss
@@ -139,9 +139,9 @@ section.events {
   &.related {
     h3 { font-size: 1em;}
     a {
-      padding: $grid-gutter-width/4;
-      margin-left: -$grid-gutter-width/4;
-      margin-right: -$grid-gutter-width/4;
+      padding: math.div($grid-gutter-width, 4);
+      margin-left: math.div(-$grid-gutter-width, 4);
+      margin-right: math.div(-$grid-gutter-width, 4);
     }
     h2 {
       font-size:1rem;
