--- a/themes/siwps/styles/style.scss
+++ b/themes/siwps/styles/style.scss
@@ -510,7 +510,7 @@ a.button {
 }
 
 .subpages {
-  margin-left: (-$grid-gutter-width / 2);
+  margin-left: (math.div(-$grid-gutter-width, 2));
 }
 
 .deliverables {
