--- a/themes/siwps/styles/_nav.scss
+++ b/themes/siwps/styles/_nav.scss
@@ -1,291 +1,264 @@
 @use "color" as *;
 @use "grid" as *;
-$nav_height:50px;
+$nav_height: 50px;
 
 #navmobiletoggle {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    font-size: 3em;
-    z-index: 20000001;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  font-size: 3em;
+  z-index: 20000001;
 
-    color: $nav_blue;
-    text-decoration: none;
-    height: 54px;
-    width: 54px;
-    border: none;
-    background:none;
+  color: $nav_blue;
+  text-decoration: none;
+  height: 54px;
+  width: 54px;
+  border: none;
+  background: none;
 
-    line-height: 54px;
-    overflow: hidden;
-    white-space: nowrap;
-    display: block;
+  line-height: 54px;
+  overflow: hidden;
+  white-space: nowrap;
+  display: block;
 
-    @media (min-width: $screen-lg-min) {
-        display: none;
-    }
+  @media (min-width: $screen-lg-min) {
+    display: none;
+  }
 
-    &:before {
-        content: "☰";
-    }
+  &:before {
+    content: "☰";
+  }
 
-    &.open:before {
-        content: "✕";
-    }
+  &.open:before {
+    content: "✕";
+  }
 }
 
 #navmobile {
-    display: none;
-    position: fixed;
-    background: #fff;
-    z-index: 20000000;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    font-size:2rem;
-    font-weight: 500;
+  display: none;
+  position: fixed;
+  background: #fff;
+  z-index: 20000000;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  font-size: 2rem;
+  font-weight: 500;
 
-    ul {
-
-        a {
-            text-decoration: none;
-            color: $nav_blue;
-
-
-
-        }
-
-
-        list-style: none;
-        margin:60px 0 0 0;
-        padding:0;
-        height:$nav_height;
-
-        text-align: center;
-
-
-        li {
-            display: block;
-
-            margin: 0;
-            text-transform: uppercase;
-            text-decoration: none;
-            padding: 30px 10px 30px 10px;
-
-            height: $nav_height;
-
-            &.aktive {
-                a {
-                    border-bottom: 3px solid $nav_blue;
-                }
-            }
-        }
+  ul {
+    a {
+      text-decoration: none;
+      color: $nav_blue;
     }
 
+    list-style: none;
+    margin: 60px 0 0 0;
+    padding: 0;
+    height: $nav_height;
+
+    text-align: center;
+
+    li {
+      display: block;
+
+      margin: 0;
+      text-transform: uppercase;
+      text-decoration: none;
+      padding: 30px 10px 30px 10px;
+
+      height: $nav_height;
+
+      &.aktive {
+        a {
+          border-bottom: 3px solid $nav_blue;
+        }
+      }
+    }
+  }
 }
 
-
-
 #nav {
-    max-width:1600px;
-    margin:0 auto;
+  max-width: 1600px;
+  margin: 0 auto;
+  display: none;
+
+  position: relative;
+  z-index: 1000;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+
+  //@include container-flush();
+  height: $nav_height;
+
+  background: $columbia_blue;
+
+  @media (min-width: $screen-lg-min) {
+    display: block;
+  }
+
+  .is-sticky & {
+    box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.15);
+  }
+
+  a {
+    color: #fff;
+    text-decoration: none;
+
+    &:hover {
+    }
+  }
+
+  ul {
+    list-style: none;
+    margin: 0px 0 0 1.5em;
+    padding: 0;
+    height: $nav_height;
+    float: left;
+
+    li {
+      display: block;
+      float: left;
+      margin: 0;
+      font-size: 0.85rem;
+      text-transform: uppercase;
+      text-decoration: none;
+      padding: 15px 10px 0 10px;
+      height: $nav_height;
+
+      border-bottom: 0px solid rgba(255, 255, 255, 0.5);
+      transition: all 0.25s;
+      -moz-transition: all 0.25s;
+      -webkit-transition: all 0.25s;
+
+      @media (min-width: $screen-xl-min) {
+        padding: 15px 15px 0 15px;
+      }
+
+      &:hover {
+        border-bottom: 4px solid rgba(255, 255, 255, 0.5);
+      }
+    }
+  }
+
+  .aktive {
+    border-bottom: 4px solid #fff;
+  }
+
+  #search {
     display: none;
 
-    @media (min-width: $screen-lg-min) {
-        display: block;
+    float: right;
+    background-color: #fff;
+    height: $nav_height;
+    min-width: $nav_height;
+
+    background-position: right center;
+    //padding-right:44px;
+    button {
+      float: right;
+
+      align-items: center;
+      justify-content: center;
+      display: flex;
+      background-position: center center;
+      border: none;
+      height: 45px;
+      width: 45px;
+      border-radius: 0.25em;
+      background-color: #fff;
+      padding-left: 1rem;
+
+      img {
+        width: 22px;
+        height: 22px;
+      }
+
+      &:hover {
+        opacity: 0.5;
+        //box-shadow: 0 0 5px rgba($nav_blue, .2);
+      }
     }
 
-    .is-sticky & {
-        box-shadow: 0 4px 4px -2px  rgba(0,0,0,0.15);
+    @media (min-width: ($screen-xl-min - 200)) {
+      display: block;
     }
 
-    position: relative;
-    z-index: 1000;
-    font-weight:500;
-    letter-spacing: 0.5px;
-
-    //@include container-flush();
-    height:$nav_height;
-
-    background: $columbia_blue;
-
-
-    a {
-        color: #fff;
-        text-decoration: none;
-
-
-
-        &:hover {}
+    .search-input {
+      float: left;
     }
 
-    ul {
-        list-style: none;
-        margin: 0px 0 0 1.5em;
-        padding: 0;
-        height: $nav_height;
-        float: left;
-
-        li {
-            display: block;
-            float: left;
-            margin: 0;
-            font-size: .85rem;
-            text-transform: uppercase;
-            text-decoration: none;
-            padding: 15px 10px 0 10px;
-
-            @media (min-width: $screen-xl-min) {
-                padding: 15px 15px 0 15px;
-            }
-
-            height:$nav_height;
-
-            border-bottom: 0px solid rgba(255, 255, 255, 0.5);
-            transition:all .25s;
-            -moz-transition: all .25s;
-            -webkit-transition: all .25s;
-
-            &:hover {
-                border-bottom: 4px solid rgba(255, 255, 255, 0.5);
-            }
-
-
-        }
+    input {
+      font-size: 0.85rem;
+      padding: 15px 0.2em 10px 0.2em;
+      margin: 0.1em 0.2em;
+      /* the following ensures they're all using the same box-model for rendering */
+      -moz-box-sizing: border-box;
+      /* or `border-box` */
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      display: inline-block;
+      height: calc(45px);
+      background: none;
+      border: none;
+      color: #555;
+      outline: none;
+      vertical-align: center;
     }
 
-    .aktive {
-        border-bottom: 4px solid #fff;
+    input[type="text"] {
+      background: #ffffff;
+      text-transform: uppercase;
+      color: $nav_blue;
+      border: none;
+      outline: none;
+      width: 100px;
+      transition: width 0.25s;
+
+      &:focus {
+        width: 250px;
+      }
     }
 
-
-    #search {
-		button {
-            float: right;
-                 
-                align-items: center;
-                justify-content: center;
-                display:flex;
-            background-position: center center;
-            border: none;
-            height: 45px;
-            width: 45px;
-			border-radius: .25em;
-			background-color:#fff;
-			padding-left:1rem;
-
-            img {
-                width:22px;
-                height:22px;
-       
-            }
-
-            &:hover {
-                opacity:.5;
-                //box-shadow: 0 0 5px rgba($nav_blue, .2);
-            }
-        }
-
-
-
-        display: none;
-
-        @media (min-width: ($screen-xl-min - 200)) {
-            display: block;
-        }
-
-
-        float:right;
-        background-color:#fff;
-        height:$nav_height;
-        min-width: $nav_height;
-
-
-        background-position:right center;
-        //padding-right:44px;
-
-        .search-input {
-            float: left;
-        }
-
-        input {
-            font-size: .85rem;
-            padding: 15px 0.2em 10px 0.2em;
-            margin: 0.1em 0.2em;
-            /* the following ensures they're all using the same box-model for rendering */
-            -moz-box-sizing: border-box;
-            /* or `border-box` */
-            -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-            display: inline-block;
-            height: calc(45px);
-            background: none;
-            border: none;
-            color: #555;
-            outline: none;
-            vertical-align: center;
-
-        }
-
-        input[type="text"] {
-            background: #ffffff;
-            text-transform: uppercase;
-            color: $nav_blue;
-            border: none;
-            outline: none;
-            width: 100px;
-            transition: width .25s;
-
-            &:focus {
-                width: 250px;
-            }
-        }
-
-        input[type="email"]:focus {
-            background: #ff0;
-        }
-
-        
-
-        a,
-        input[type="submit"] {
-            color: #00f;
-        }
-
-
-        ::placeholder {
-            /* Chrome, Firefox, Opera, Safari 10.1+ */
-            color: $nav_blue;
-            opacity: 1;
-            /* Firefox */
-
-            & :focus {
-                color: #999;
-            }
-        }
-
-        :-ms-input-placeholder {
-            /* Internet Explorer 10-11 */
-            color: $nav_blue;
-
-            & :focus {
-                color: #999;
-            }
-        }
-
-        ::-ms-input-placeholder {
-            /* Microsoft Edge */
-            color: $nav_blue;
-
-            & :focus {
-                color: #999;
-            }
-        }
-
-
-
+    input[type="email"]:focus {
+      background: #ff0;
     }
 
-    #search-inner {}
+    a,
+    input[type="submit"] {
+      color: #00f;
+    }
+
+    ::placeholder {
+      /* Chrome, Firefox, Opera, Safari 10.1+ */
+      color: $nav_blue;
+      opacity: 1;
+      /* Firefox */
+
+      & :focus {
+        color: #999;
+      }
+    }
+
+    :-ms-input-placeholder {
+      /* Internet Explorer 10-11 */
+      color: $nav_blue;
+
+      & :focus {
+        color: #999;
+      }
+    }
+
+    ::-ms-input-placeholder {
+      /* Microsoft Edge */
+      color: $nav_blue;
+
+      & :focus {
+        color: #999;
+      }
+    }
+  }
+
+  #search-inner {
+  }
 }
